Agrego validacion 404 a servicios
