# src/handlers/doTransferHandler.js
@@ -24,6 +24,12 @@ function handler({ walletService }) {
   return async function (req, reply) {
     const amount = req.body.amount;
     const senderWalletData = await walletService.getWallet(req.body.sender_id);
+    if(!senderWalletData) reply.code(404).send({
+      status: 'FAILURE',
+      code: 'WALLET_NOT_FOUND',
+      message: 'Wallet of user with id [' +req.body.sender_id+ '] not found',
+      statusCode: 404
+    });
     const transferTx = await walletService.transfer(senderWalletData, req.body.receiver_address, amount);
     return reply.code(200).send(transferTx);
   };
